# redex

./: .gitignore  README.md  codex-shim.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  redex.py
scripts/: Start-CodexOfficial.ps1  Start-CodexRepoCore.ps1  Start-CodexWithRepoCore.ps1  Start-Redex.ps1  Start-RedexTailnet.ps1
src/codex_shim/: __init__.py  __main__.py  app_server.py  bridge.py  cli.py
src/redex/: __init__.py  app_server.py  bridge.py  cli.py
tests/: __init__.py  browser_env.py  browser_perf.js  fake_codex_server.py  perf_harness.py  support.py  test_app_server_payloads.py  test_bridge_integration.py  test_fake_codex_server.py
tests/browser/: fixtures.js  redex.spec.js
