[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "redex"
version = "0.1.0"
description = "External control surface for browsing and resuming Codex desktop app sessions."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Peter Rindal" }
]
dependencies = [
  "websocket-client>=1.8,<2",
]

[project.scripts]
redex = "redex.cli:main"
codex-shim = "codex_shim.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
